# RecTokens

./: .gitignore  README.md  benchmark_nn_quantize.py  benchmark_vtnk.py  eval_retrieval.py  finetune_qwen.py  precompute_sequences.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_constrained_decoding.py  test_data.py  test_data_rqkmeans.py  test_kernel.py  test_tokenizers.py  test_trie.py  train_rqkmeans.py  train_rqvae.py
examples/: amazon.py  preprocessing.py  utils.py
examples/configs/: eval_retrieval_beauty.gin  finetune_qwen_beauty.gin  precompute_sequences_beauty.gin  train_rqkmeans_beauty.gin  train_rqkmeans_sports.gin  train_rqvae_beauty.gin  train_rqvae_sports.gin
examples/configs/finetuning/: eval_prompts_beauty.gin  finetune_qwen_beauty.gin  sid_align_qwen_beauty.gin
examples/configs/pretraining/: train_rqkmeans_beauty.gin  (+1 more)
examples/data/: amazon.py  preprocessing.py
examples/training/: finetune_qwen.py  train_rqkmeans.py  train_rqvae.py
rectokens/: __init__.py  datasets.py  registry.py
rectokens/codebooks/: __init__.py  euclidean.py
rectokens/core/: __init__.py  codebook.py  dataset.py  quantizer.py  tokenizer.py
rectokens/decoding/: constrained_decoding.py  csr.py  trie.py  vntk.py
rectokens/kernels/: constrained_node_transition.py  constrained_node_transition_cute.py  ema_update.py  fused_topk_constrained_node_transition_cute.py  nn_quantize.py  utils.py
rectokens/modules/: constrained_linear.py  constraint_enforcer.py  sparse_linear.py
rectokens/ops/: constrained_node_transition.py  ema_update.py  faiss_quantize.py  fused_topk_constrained_node_transition.py  nn_quantize.py
rectokens/quantizers/: __init__.py  kmeans.py  residual.py
rectokens/schemas/: compact_csr_trie.py  config.py  state.py
rectokens/tokenizers/: __init__.py  rq_kmeans.py  rqvae.py
scripts/training/: train_rqvae.py
tests/: test_constrained_decoding.py  test_ema_update_kernel.py  test_fused_topk_kernel.py  test_hf_integration.py  test_kernel.py  test_tokenizers.py  test_trie.py
(+21 files in other folders)
