[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rectokens"
version = "0.1.0"
description = "A tokenizer library for sequential recommendation systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
